Updated translations #build

--- a/src/main/resources/assets/vampirism/guide/lang/de_DE.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/de_DE.lang
@@ -18,6 +18,12 @@ guide.vampirism.itemsAndBlocks.found.pureBlood=Wird von Vampir-Lords in verschie
 guide.vampirism.itemsAndBlocks.found.bloodAltar1=Dieser Block kann als Leuchtfeuer fungieren und gibt dir Geschwindigkeits- sowie Sättigungseffekte (du verbrauchst weniger Blut). Aber um diesen Effekt zu aktivieren, musst du dir ein "Blutsauger" herstellen und ihn durch Töten von Tieren füllen. Ist es gefüllt, kannst du es in den Altar einführen und der Effekt wird aktiviert, verbraucht aber langsam das gesammelte Blut. Dieser Block kann nicht hergestellt werden sondern nur in Sümpfen gefunden werden.
 guide.vampirism.itemsAndBlocks.found.vampireFlower=Vampir Orchideen können im Vampir Biom gefunden werden.
 
+#Levels
+
+#Mobs
+
+#VampirePlayer
+
 
 
 
