--- a/src/main/resources/assets/vampirism/guide/lang/ru_RU.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/ru_RU.lang
@@ -1,6 +1,6 @@
 #X-Generator: crowdin.com
 #General
-guide.vampirism.book.title=Путеводитель по Вампиризму
+guide.vampirism.book.title=Путеводитель по моду Вампиризм
 guide.vampirism.welcomeMessage=путеводитель.вампиризм.приветствиеСообщение
 guide.vamprism.book.name=Путеводитель по Вампиризму
 
@@ -17,10 +17,13 @@ guide.vampirism.gettingStarted.asAVampire.text=Раз вы стали вампи
 guide.vampirism.itemsAndBlocks.category=Вещи и блоки
 guide.vampirism.itemsAndBlocks.found.title=Найдено в мире
 guide.vampirism.itemsAndBlocks.found.pureBlood=Падает с Лорда Вампира в разных степенях чистоты, основанных на уровне Лорда. Требуется для ритуалов высокого уровня.
+guide.vampirism.itemsAndBlocks.found.bloodAltar1=Этот блок вампиры могут использовать в качестве маяка, он будет давать вам скорость, а также эффект насыщения (вы потребляете меньше крови). Но для того, чтобы этот его активировать, вы должны сделать себе  меч "Лич" и заполнить его с кровью, убивая им жителей и других существ. Тогда вы сможете вставить меч в этот блок, работая "маяк" медленно истощает меч. Блок нельзя сделать, но зато он спавнится в болотах.
 guide.vampirism.itemsAndBlocks.found.vampireFlower=Вампирские Орхидеи могут быть найдены в вампирском биоме.
 guide.vampirism.itemsAndBlocks.found.humanHearth=Они появляются из охотников на вампиров. Вы можете или есть их, чтобы получить большое количество крови, или использовать в нескольких ритуалах.
 guide.vampirism.itemsAndBlocks.found.vampireFang=Они появляются из вампиров. Используются в нескольких рецептах или для получения "Sanguinare Vampiris" нажатием правой кнопкой мыши держа Вампирский клык в руке.
+guide.vampirism.itemsAndBlocks.bBottle.text=Содержит кровь, чтобы выжить, когда вы не на охоте. Вы можете превратить кровь в кровавый слиток правой кнопкой мыши. Налить дополнительную кровь в бутылку можно с помощью Shift + правая кнопка мыши. Включите автоматический режим (Нажмите %s), чтобы автоматически переливать дополнительную кровь в любую кровавую бутылку на панели быстрого доступа. Также заполненные бутылки используются в нескольких рецептах. Вы можете создать их с помощью следующего рецепта или держать обычные стеклянные бутылки на панели быстрого доступа, когда кусаете мобов.
 guide.vampirism.itemsAndBlocks.sunscreen.text=Уменьшает урон от солнца на некоторое время.
+guide.vampirism.itemsAndBlocks.armor.text=Специальная Вампирская броня уменьшает  влияние солнца на вампиров. Если полностью изношена, вы не получите эффект путаница, но получите мгновенный урон. По прочности броня сравнима с железной.
 guide.vampirism.itemsAndBlocks.armor.title=Вампирская броня
 guide.vampirism.itemsAndBlocks.altars.altar2.text=Алтарь используется между уровнями %d и %d
 guide.vampirism.itemsAndBlocks.altars.altar4.text=%s используется с уровня %d и состоит из нескольких блоков\: главный блок, верхушки и разные конструкции из стандартных блоков. За большей информацией обратитесь к разделу об уровнях.
@@ -33,10 +36,12 @@ guide.vampirism.levels.introduction.text=После обращения в вам
 guide.vampirism.levels.altar2.title=Уровни с %d до %d
 guide.vampirism.levels.altar2.text=Создайте алтарь и поставьте его где-нибудь. Чтобы использовать его вы должны заполнить его кровью (правая-кнопка мыши с заполненной бутылкой крови). Если крови достаточно вы можете нажать правой кнопкой мыши с пустой рукой и кровь будет перелита в вас, делая вас сильнее.
 guide.vampirism.levels.altar4.title=Уровни %d+
+guide.vampirism.levels.altar4.text=Алтарь требует мультиблоковую структуру. Во-первых, сделайте главный блок (смотреть "Вещи и блоки") и поставьте, дальше постройте колонны на определённых позициях. Тип блока колонны и высота различается на разных уровнях, на верхнем блоке должна быть верхушка. Убедитесь, что нет других блоков (например, травы) (Скриншоты-примеры в конце). После того, как вы построили структуру, положите нужное количество вещей в алтарь (посмотрите на следующую таблицу), shift + правая кнопка мыши на алтарь и ждите пока магия не произойдёт. Не используйте shift чтобы положить вещи в алтарь, это баг в forge для 1.7.10
 guide.vampirism.levels.altar4.item_text=Необходимые вещи
 guide.vampirism.levels.altar4.structure1.name=Структура 1
+guide.vampirism.levels.altar4.structure2.name=Структура 2 (Вы должны смотреть на север при её постройке)
 guide.vampirism.levels.altar4.item_req=Необходимые вещи
-guide.vampirism.levels.altar4.struc_req=Необходимая структура
+guide.vampirism.levels.altar4.struc_req=Требования к структуре
 guide.vampirism.levels.category=Как поднять уровень
 
 #Mobs
@@ -54,10 +59,12 @@ guide.vampirism.mobs.ghost.title=Призрак
 
 #VampirePlayer
 guide.vampirism.vplayer.category=Особенности игрока-вампира
+guide.vampirism.vplayer.general.text=У игрока могут быть разные уровни вампиризма (смотри раздел "Как повысить уровень"), в настоящее время вы можете достичь максимального уровня . %s./n/n Скорость, урон, высота прыжка и здоровье увеличивается вместе с вашем уровнем./n/n Игрок, ставший вампиром обладает ночным зрением, уровень которого увеличивается с уровнем игрока также как "Кровавое зрение", которое позволяет вам легче замечать животных. Чтобы переключится между ними нажмите кнопку  %s . Вместо датчика сытости у вампиров датчик крови, который действует аналогично датчику сытости./n/nВы можете высасывать кровь из некоторых мобов (Кнопка %s), Вы увидите вампирские клыки, когда смотрите на них. Если вы кусаете моба у которого нет крови вы получите короткий эффект отравления./n/nУкушенные мобы могут умереть или превратится в свою вампирскую версию./n/nВы можете наливать кровь в бутылки использую Shift+ПКМ. Вы можете включить автозаполнение (%s), которое заливает кровь в стеклянные или кровавые бутылки на панели быстрого доступа./n/nВаш скин немного изменён на вампирский.
 guide.vampirism.vplayer.general.title=Главное
 guide.vampirism.vplayer.general.loose_level=Если вас убил охотник на вампиров, вы потеряете один уровень вампира.
 guide.vampirism.vplayer.sun_damage.text=Есть 3 разных воздействия солнца на игрока-вампира\: тошнота, слабость и урон./nС повышением уровня вампира вы будете страдать от нескольких./nНа ниских уровнях вы можете защитить себя от наивысшего урона благодаря съеданию "Защиты от солнца"./nВы можете защитить себя от тошноты надев полный сет вампирской брони./n
 guide.vampirism.vplayer.sun_damage.title=Солнечный урон
+guide.vampirism.vplayer.skills.text=Как вампир вы получаете специальные умения с повышением уровня. Для примера вы можете управлять погодой с уровня 4./n/nЧтобы активировать их есть специальное меню\: зажмите среднюю кнопку мыши [проверьте ваши настройки управления] и "роза умений" появится, двигайте мышью в направлении нужного умения, пока оно не подсветится и отпустите кнопку./n/nЕсли вы не хотите использовать умение или отпустите мышь не выделяя ничего, или выделите красный крест./n/nВсе умения имеют минимальный уровень и перезарядку. Некоторые умения так же имеют продолжительность, тогда вы можете отключить умение если оно вам больше не нужно выбрав его снова, чтобы уменьшить время перезарядки.
 guide.vampirism.vplayer.skills.title=Умения
 guide.vampirism.vplayer.skills.bat_transformation=Умение\: Превращение в летучую мышь/n/nНочью вы можете превратиться в летучую мышь и летать как в творческом режиме, но вы не можете ставить или ломать блоки и использовать вещи. Другая большая проблема летучей мыши - небольшое количество здоровья, поэтому избегайте враждебных существ. Вы можете превращаться так часто, как хотите, но с восходом солнца вы автоматически превратитесь обратно.
 guide.vampirism.vplayer.skills.revive_fallen=Умение\: Возродить умершего/n/nЗомби и скелеты (больше мобов будет добавлено в будущем) иногда оставляют кучки костей, когда умирают. Вы можете использовать это умение чтобы возродить умерших мобов, которые будут сражаться как миньоны за вас.
