--- a/src/main/resources/assets/vampirism/lang/it_IT.lang
+++ b/src/main/resources/assets/vampirism/lang/it_IT.lang
@@ -3,9 +3,9 @@
 entity.vampirism.vampireHunter.name=Cacciatore di Vampiri
 entity.vampirism.vampire.name=Vampiro
 entity.vampirism.ghost.name=Fantasma
-entity.vampirism.vampireLord.name=Signore (Capo) dei vampiri
-entity.vampirism.vampireMinionR.name=Schiavo dei vampiri
-entity.vampirism.vampireMinionS.name=Schiavo dei vampiri
+entity.vampirism.vampireLord.name=Signore dei vampiri
+entity.vampirism.vampireMinionR.name=Schiavo vampirico
+entity.vampirism.vampireMinionS.name=Schiavo vampirico
 entity.vampirism.blinding_bat.name=Pipistrello
 entity.vampirism.dracula.name=Dracula
 entity.vampirism.dead_mob.name=Mob Morto
@@ -15,16 +15,16 @@ item.vampirism.vampiresFear.name=Paura del vampiro
 item.vampirism.bloodBottle.name=Ampolla di sangue
 item.vampirism.vampireFang.name=Zanna di Vampiro
 item.vampirism.pitchfork.name=Forcone
-item.vampirism.humanHeart.name=Cuore di umano
+item.vampirism.humanHeart.name=Cuore umano
 item.vampirism.torch.name=Torcia
 item.vampirism.pureBlood.name=Sangue Puro
 item.vampirism.sunscreen.name=Protezione dal sole
 item.vampirism.leechSword.name=Sanguisuga
-item.vampirism.coffin.name=Bara da Morto
-item.vampirism.vampireArmor_helmet.name=Elmo da vampiro
-item.vampirism.vampireArmor_leggings.name=Pantaloni da vampiro
-item.vampirism.vampireArmor_boots.name=Scarpe da vampiro\n
-item.vampirism.vampireArmor_chestplate.name=Pettorali da vampiro
+item.vampirism.coffin.name=Bara
+item.vampirism.vampireArmor_helmet.name=Elmo vampirico
+item.vampirism.vampireArmor_leggings.name=Pantaloni vampirici
+item.vampirism.vampireArmor_boots.name=Scarpe vampiriche\n
+item.vampirism.vampireArmor_chestplate.name=Pettorale vampirico
 item.vampirism.minionNameTag.name=Etichetta del Minion
 
 # Blocks
@@ -35,21 +35,21 @@ block.vampirism.bloodAltarTier4Tip.name=Altare del sangue della punta dell'infus
 block.vampirism.churchAltar.name=Altare della pulizia
 block.vampirism.cursedEarth.name=Terra maledetta
 block.vampirism.vampireOrchid.name=Orchidea Vampirica
-block.vampirism.blockCoffin.name=Bara da morto
+block.vampirism.blockCoffin.name=Bara
 block.vampirism.castleBlock.name=Blocco del castello
-block.vampirism.castleSlab.name=Lastra per castello
-block.vampirism.castleStairs.name=scale per castello
+block.vampirism.castleSlab.name=Lastra del castello
+block.vampirism.castleStairs.name=scale del castello
 
 #GUI
-gui.vampirism.revertback.head=Tornare allo stato di un normale umano
+gui.vampirism.revertback.head=Tornare allo stato umano
 gui.vampirism.revertback.desc=Perderai tutti i tuoi livelli e morirari
 
 # Keys
 keys.vampirism.category=Vampirismo
 keys.vampirism.suck=Succhiano il sangue
 keys.vampirism.auto=Bottiglia di sangue con riempimento automatico
-keys.vampirism.skill=Attivare le abilita' di Vampiro
-key.vampirism.vision=Cambia tipo di visuale
+keys.vampirism.skill=Attiva le abilità del vampiro
+key.vampirism.vision=Cambia la visuale
 
 #General
 itemGroup.vampirism=Vampirismo
@@ -58,8 +58,8 @@ potion.vampirism.sunscreen=Protezione per il sole
 potion.vampirism.thirst=Sete
 potion.vampirism.saturation=Saturazione
 potion.vampirism.sanguinare=Sanguinamento
-text.vampirism.skill.level_to_low=Il tuo livello di vampiro è troppo basso per questo
-text.vampirism.skill.cooldown_not_over=Si prega di attendere fino a quando il tempo di recupero non finira'
+text.vampirism.skill.level_to_low=Il tuo livello vampirico è troppo basso per questo
+text.vampirism.skill.cooldown_not_over=Si prega di attendere fino a quando il tempo di recupero non finirà
 text.vampirism.entity_level=Livello
 text.vampirism.ritual_missing_times=Mancano gli oggetti per questo rituale
 text.vampirism.ritual_structure_wrong=La struttura è sbagliata per questo rituale
@@ -69,33 +69,33 @@ text.vampirism.not_enough_blood=Non c'è abbastanza sangue nell'altare
 text.vampirism.ritual_requirements_not_met=Non tutti i requisiti per questo rituale sono state soddisfatti
 text.vampirism.purity=Purezza
 text.vampirism.auto_fill_enabled=Riempimento automatico abilitato
-text.vampirism.auto_fill_disabled=Auto riempimento per disabili
-text.vampirism.skill.deactivated_by_serveradmin=Questa abilità è disattivata dal vostro admin
-text.vampirism.ritual_no_vampire=Hai bisogno di essere vampiro per questo rituale
+text.vampirism.auto_fill_disabled=Riempimento automatico disabilitato
+text.vampirism.skill.deactivated_by_serveradmin=Questa abilità è disattivata dall'admin
+text.vampirism.ritual_no_vampire=Hai bisogno di essere un vampiro per questo rituale
 text.vampirism.cant_fly_day=Non puoi volare durante il giorno
 text.vampirism.no_more_minions=Non puoi controllare altri Servitori
 text.vampirism.coffin.noSleep=puoi dormire solo di giorno
 text.vampirism.coffin.occupied=Questa bara è occupata
 text.vampirism.coffin.stopsleeping=Lascia la bara
-text.vampirism.blood_left=Sangue finito
+text.vampirism.blood_left=Sangue rimasto
 text.vampirism.blood=Sangue
-text.vampirism.vampirelevel=Livello del vampiro
-text.vampirism.entitysblood=Sangue dell'entita'
+text.vampirism.vampirelevel=Livello vampirico
+text.vampirism.entitysblood=Sangue dell'entità
 text.vampirism.minion=Servitore
-text.vampirism.lord=Signore (Capo)
+text.vampirism.lord=Signore
 text.vampirism.normal_vision=Visione normale
 text.vampirism.night_vision=Visione notturna
 text.vampirism.no_control_minion=Non hai piu' alcun controllo su questo minion
 text.vampirism.need_empty_bottle=Mio Signore, ho bisogno di una bottiglia vuota per raccogliere il sangue
 text.vampirism.thanks=Grazie
 text.vampirism.coming_back=Sto tornando, mio Signore
-text.vampirism.sorry_i_died_while_doing=Mio Signore, mi dispiace ma sono morto soddisfano il vostro compito
+text.vampirism.sorry_i_died_while_doing=Mio Signore, mi dispiace ma sono morto soddisfando il vostro compito
 text.vampirism.current_task=Attività corrente
 text.vampirism.structure=Struttura
-text.vampirism.pillar_blocks=Blocchi di pilastro
+text.vampirism.pillar_blocks=Blocchi del pilastro
 
 #Skill
-skill.vampirism.bat_skill=Usa la modalita' pipistrello
+skill.vampirism.bat_skill=Togli la modalità pipistrello
 skill.vampirism.change_weather=Tempo
 skill.vampirism.cancel=Cancella
 skill.vampirism.freeze=Congela
@@ -116,12 +116,12 @@ minioncommand.vampirism.comeback=Torna indietro (Remote Minion)
 minioncommand.vampirism.justfollow=Seguimi e basta
 
 #Config
-category.vampirism.balance=Impostazioni di bilanciamento
-category.vampirism.balance.tooltip=Modificare qualsiasi proprietà rilevanti di equilibrio
-category.vampirism.balance_level=Impostazioni di bilanciamento LevelUp
+category.vampirism.balance=Impostazioni bilanciate
+category.vampirism.balance.tooltip=Modificare qualsiasi proprietà bilanciata
+category.vampirism.balance_level=Impostazioni di bilanciate per l'aumento di livello
 category.vampirism.balance_player_mod=Impostazioni del modificatore lettore vampiro
-category.vampirism.balance_player_skills=Impostazioni di competenze del lettore vampiro
-category.vampirism.balance_mob_prop=Proprietà di vampirismo mob
-category.vampirism.balance_mob_prop.tooltip=Modificare le proprietà dei mostri aggiunti da vampirismo
-category.vampirism.balance_vv_prop=Proprietà di vampiro del villaggio
-category.vampirism.balance_vv_prop.tooltip=Cambia i cacciatori di modo nei villaggi agiscono e regolare altri villaggio cose correlate
+category.vampirism.balance_player_skills=Impostazioni delle abilità del vampiro
+category.vampirism.balance_mob_prop=Proprietà del vampirismo dei mob
+category.vampirism.balance_mob_prop.tooltip=Modificare le proprietà dei mostri aggiunti dalla mod Vampirism
+category.vampirism.balance_vv_prop=Proprietà del vampiro del villaggio
+category.vampirism.balance_vv_prop.tooltip=Cambia il modo di agire dei cacciatori nei villaggi e regolare altre cose correlate al villaggio
