--- a/src/main/resources/assets/vampirism/lang/ru_RU.lang
+++ b/src/main/resources/assets/vampirism/lang/ru_RU.lang
@@ -37,7 +37,7 @@ block.vampirism.cursedEarth.name=Проклятая земля
 block.vampirism.vampireOrchid.name=Вампирская орхидея
 block.vampirism.blockCoffin.name=Гроб
 block.vampirism.castleBlock.name=Блок замка
-block.vampirism.castleSlab.name=Плитки замка
+block.vampirism.castleSlab.name=Плита замка
 block.vampirism.castleStairs.name=Ступеньки замка
 
 #GUI
