--- a/src/main/resources/assets/vampirism/guide/lang/pt_BR.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/pt_BR.lang
@@ -1,6 +1,7 @@
 #X-Generator: crowdin.com
 #General
 guide.vampirism.book.title=Guia de vampirismo
+guide.vampirism.welcomeMessage=guide.vampirism.welcomeMessage
 guide.vamprism.book.name=Guia de vampirismo
 
 #Getting Started
@@ -20,12 +21,55 @@ guide.vampirism.itemsAndBlocks.found.bloodAltar1=Este bloco pode agir como um fa
 guide.vampirism.itemsAndBlocks.found.vampireFlower=Orquídeas de vampiro podem ser encontradas no bioma de vampiro.
 guide.vampirism.itemsAndBlocks.found.humanHearth=Estas são descartadas por caçadores de vampiros. Você também pode comê-los para obter uma grande quantidade de sangue ou usá-los em vários rituais.
 guide.vampirism.itemsAndBlocks.found.vampireFang=Estas são descartadas por vampiros. Você pode usá-los em algumas receitas crafting ou clique direito com eles para obter "Vampiris Sanguinare".
+guide.vampirism.itemsAndBlocks.bBottle.text=Mantém o sangue para animá-las quando não caçando. Você pode transferir o sangue para o bar de sangue com um clique direito do mouse. Transferir o sangue extra para a garrafa com shift + botão direito do mouse. Ative o modo auto, (imprensa %s) para transferir automaticamente o sangue extra para qualquer garrafa de sangue no inventário visível. Completo garrafas também são usadas em alguns crafting receitas. Você pode também ofício-a com a seguinte receita ou simples manter normal glas garrafas na sua hotbar quando bitting multidões.
+guide.vampirism.itemsAndBlocks.sunscreen.text=Diminui você dano do sol por algum tempo.
+guide.vampirism.itemsAndBlocks.armor.text=A armadura de vampiro especialmente projetada reduz a influência do sol sobre vampiros. Se totalmente desgastado você não consegue um efeito de confusão, bem como menos dano imediato. As armaduras em si podem ser comparada a armadura de ferro de baunilha.
+guide.vampirism.itemsAndBlocks.armor.title=Armadura de vampiro
+guide.vampirism.itemsAndBlocks.altars.altar2.text=Este altar é usado para o nivelamento entre %d e %d de níveis
+guide.vampirism.itemsAndBlocks.altars.altar4.text=O %s é usado para o nivelamento a partir de nível %d e consiste em vários blocos\: O bloco principal, as pontas e blocos de estrutura diferente de baunilha. Para mais informações, dê uma olhada na seção de nivelamento.
+guide.vampirism.itemsAndBlocks.altars.title=Blocos de altar
+guide.vampirism.itemsAndBlocks.coffin.text=O caixão pode ser usado para dormir durante o dia e para definir o seu ponto de desova. Isso é recomendo colocá-lo no lugar onde o sol não dá. Você pode alterar a cor do interior, shift-direito-clicando com uma tintura nele. 
 
 #Levels
+guide.vampirism.levels.introduction.title=Introdução
+guide.vampirism.levels.introduction.text=Depois de se tornar um vampiro (ver introdução) você provavelmente quer alcançar níveis mais altos. A nível até você ter realizar rituais em altares diferentes, mas sempre à noite.
+guide.vampirism.levels.altar2.title=Níveis de %d para %d
+guide.vampirism.levels.altar2.text=O bloco do altar do ofício e colocá-lo em algum lugar. Para usar este aqui você precisa preenchê-lo com sangue (botão direito do mouse com garrafas cheias de sangue). Se há sangue suficiente dentro de você pode botão direito do mouse com uma mão vazia e o sangue vai ser infundido em você, te deixando ainda mais forte.
+guide.vampirism.levels.altar4.title=Nível %d +
+guide.vampirism.levels.altar4.text=Este altar requer uma estrutura multiblock. Primeiro ofício o bloco principal (ver itens e blocos) e colocá-lo para baixo, então você tem que construir pilares na posição definida. O tipo de bloco de pilar e a altura varia de acordo com o nível, na parte superior tem que ser uma ponta de cada. Certifique-se que não há nenhum outros blocos (por exemplo, grama) na área (exemplo screenshots no final). Depois que a estrutura estiver concluída, coloque a quantidade necessária de itens para o altar (dê uma olhada na tabela a seguir), shift clique direito e esperar para a mágica acontecer. Não utilize shift clique para inserir os itens no altar, há um bug na forja para 1.7.10
+guide.vampirism.levels.altar4.item_text=Itens requeridos
+guide.vampirism.levels.altar4.structure1.name=Estrutura 1
+guide.vampirism.levels.altar4.structure2.name=Estrutura 2 (você tem que enfrentar norte quando construí-la)
+guide.vampirism.levels.altar4.item_req=Requisitos do item
+guide.vampirism.levels.altar4.struc_req=Requisitos de estrutura
+guide.vampirism.levels.category=Como subir de nível
 
 #Mobs
+guide.vampirism.mobs.category=Mobs
+guide.vampirism.mobs.hunter.text=Caça vampiros;) / Apenas ataca os jogadores com um nível de vampiro superior %s. / nVampire caçadores perto de aldeias tentar defender a sua aldeia.
+guide.vampirism.mobs.hunter.title=Caçador de Vampiro
+guide.vampirism.mobs.vampire.text=Ataca os jogadores desde que eles não têm um nível de vampiro superior %s. / nAlso ataca aldeões e torna a vampiro. / Night ativo
+guide.vampirism.mobs.vampire.title=Vampiro
+guide.vampirism.mobs.vampire_lord.text=Spawns raramente em vampiro biomas. / nOccurs em diferentes níveis parcialmente, dependendo do nível de jogadores... / nDrops puro sangue. / é muito forte e convoca os asseclas que ajudá-lo
+guide.vampirism.mobs.vampire_lord.title=Lorde Vampiro
+guide.vampirism.mobs.vampire_minion.title=Vampiro Minion
+guide.vampirism.mobs.vampire_minion.text=São subordinados ao seu senhor. / nHave a textura do seu senhor. / nPode ser controlados por jogadores de Lorde vampiro.
+guide.vampirism.mobs.ghost.text=Desova no bioma de vampiro.
+guide.vampirism.mobs.ghost.title=Fantasma
 
 #VampirePlayer
+guide.vampirism.vplayer.category=Características do leitor de vampiro
+guide.vampirism.vplayer.general.text=Jogador pode ter níveis diferentes de vampiro (consulte a seção "Como subir de nível"), você pode atualmente alcança um nível máximo de velocidade %s./n/nYour, danificar, salto altura e aumento da saúde com você nivelamento up./n/nVampire Player tem um efeito de visão de noite que fica mais forte com níveis mais elevados, bem como uma visão de sangue, que permite detectar animais facilmente. Que pode alternar entre estas (chave\: %s)./n/nInstead de um foodbar vampiros têm uma barra de sangue que funciona semelhante da former./n/nYou pode sugar o sangue de alguns mobs (chave\: %s), você deve ver algumas presas de vampiro pop-up quando você olha para eles. Você morde uma multidão que does ' t ter sangue, se um curto veneno effect./n/nBitten multidões também vão morrer ou ser convertidos em um vampiro version./n/nYou pode armazenar sangue em garrafas de sangue usando (shift-) botão direito do mouse. Você pode habilitar o autofill (chave\: %s) que preenche qualquer sangue esquerdo, quando morder uma multidão, em glas ou sangue garrafas na hotbar./n/nYou você tem uma pele ligeiramente modificada como um vampiro.
+guide.vampirism.vplayer.general.title=Informações gerais
+guide.vampirism.vplayer.general.loose_level=Se você for morto por um caçador de vampiros que você solta um nível de vampiro.
+guide.vampirism.vplayer.sun_damage.text=Existem três diferentes impactos do sol sobre jogador vampiro\: náuseas, fraqueza e dano. / c maior vampiro níveis você será afetado por vários deles. / não baixa os níveis você pode se proteger contra o tipo mais alto de sundamage consumindo o protetor solar. / nVocê pode protegê-lo de náusea, totalmente vestindo armadura de vampiro. / n
+guide.vampirism.vplayer.sun_damage.title=Danos causados pelo sol
+guide.vampirism.vplayer.skills.text=Como um vampiro, você tem habilidades especiais com níveis mais elevados. Você pode, por exemplo, controlar o tempo a partir do nível 4. / n/nTo para ativar isso aí é um menu especial\: mantenha pressionado o botão do meio do mouse [Verifique a configuração de chave/controle] pressionado e uma rosa de"habilidade" irá aparecer, mover o mouse na direção da skill desejada até que ele é realçado e lançamento do button./n/nIf não quer, então, selecionar qualquer habilidade ou solte o mouse quando não há nada selecionado ou selecione o cross./n/nAll vermelho habilidades têm um nível mínimo exigido e um tempo de cooldown, você pode apenas ativá-lo se não estiver no modo de cooldown. Algumas habilidades também têm uma duração e, em seguida, você pode desativar a habilidade, se você não precisar dele mais selecionando-o novamente para diminuir o tempo de cooldown.
+guide.vampirism.vplayer.skills.title=Habilidades
+guide.vampirism.vplayer.skills.bat_transformation=Noite de taco transformação/n/nAt habilidade\: Você pode converter para um morcego e voar como no mod criativo, mas você não pode colocar ou quebrar blocos ou usar itens. Outra grande desvantagem do morcego é sua baixa saúde, então evite criaturas hostis. Você pode alternar o tão frequentemente como você deseja, mas ao nascer do sol, para que você será automaticamente convertido.
+guide.vampirism.vplayer.skills.revive_fallen=Habilidade\: Reviver o caído/n/nZombies e esqueletos (mobs mais podem ser adicionados no futuro) às vezes deixam uma pilha de ossos, quando eles morrem. Então você pode usar esta habilidade para reviver os mobs caídos que então lutará como asseclas para você.
+guide.vampirism.vplayer.skills.end=Existem muitas habilidades mais. Apenas experimentá-los.
+guide.vampirism.vplayer.skills.menu_text=Isto é as habilidades de alternância "habilidade rosa"
 
 
 
