--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -104,6 +104,10 @@ text.vampirism.lord.level_to_low=You vampire level is too low to be a Vampire Lo
 text.vampirism.guard_stay_away_level_low=Your vampire level is too low to travel to Dracula's castle. Stay away!
 text.vampirism.coffin.wrong_dimension=You can't sleep in this dimension.
 text.vampirism.unknown_command=Unknown Vampirism command
+text.vampirism.biome.looking_for_biome=Looking for a Vampire Forest Biome. Please wait
+text.vampirism.biome.not_found=No Vampire Forest Biome was found.
+text.vampirism.biome.found=Found a Vampire Forest Biome
+text.vampirism.castle_fail=Vampirism was not able to find a appropriate position for a Vampire Castle. It is recommend to generate a new world. You can also try "/vampirism checkForVampireBiome", if that does not find a biome, another mod is probably interfering.
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
