--- a/src/main/resources/assets/vampirism/guide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/en_US.lang
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.com
 #General
 guide.vampirism.book.title=Vampirism Guide
-guide.vampirism.welcomeMessage=guide.vampirism.welcomeMessage
+guide.vampirism.welcomeMessage=Welcome to the Vampirism Guide. Take a look around to find out what you can do in this mod. Have fun.
 guide.vamprism.book.name=Vampirism Guide
 
 #Getting Started
@@ -28,7 +28,9 @@ guide.vampirism.itemsAndBlocks.armor.title=Vampire armor
 guide.vampirism.itemsAndBlocks.altars.altar2.text=This altar is used for leveling between levels %d and %d
 guide.vampirism.itemsAndBlocks.altars.altar4.text=The %s is used for leveling as of level %d and consists of several blocks\: The main block, tips and different vanilla structure blocks. For further information take a look at the leveling section.
 guide.vampirism.itemsAndBlocks.altars.title=Altar blocks
-guide.vampirism.itemsAndBlocks.coffin.text=The coffin can be used to sleep during the day and to set your spawn-point. It is recommend do place it in spot where the sun does not get. You can change the interior color by shift-right-clicking with a dye on it. 
+guide.vampirism.itemsAndBlocks.coffin.text=The coffin can be used to sleep during the day and to set your spawn-point. It is recommend do place it in spot where the sun does not get. You can change the interior color by shift-right-clicking with a dye on it.
+guide.vampirism.itemsAndBlocks.used_for_minions=Used for minions
+guide.vampirism.itemsAndBlocks.blood_eye.text=Can be used to locate the nearest castle
 
 #Levels
 guide.vampirism.levels.introduction.title=Introduction
@@ -50,7 +52,7 @@ guide.vampirism.mobs.hunter.text=Hunts vampires ;)/nOnly attacks players with a 
 guide.vampirism.mobs.hunter.title=Vampire Hunter
 guide.vampirism.mobs.vampire.text=Attacks players as long as they don't have a vampire level higher than %s./nAlso attacks villagers and makes them to vampire./nNight active
 guide.vampirism.mobs.vampire.title=Vampire
-guide.vampirism.mobs.vampire_lord.text=Spawns rarely in vampire biomes./nOccurs in different levels partially depending on the players level./nDrops pure blood./Is very strong and summons minions which help him
+guide.vampirism.mobs.vampire_lord.text=Spawns rarely in vampire biomes./nOccurs in different levels partially depending on the players level./nDrops pure blood./nIs very strong and summons minions which help him
 guide.vampirism.mobs.vampire_lord.title=Vampire Lord
 guide.vampirism.mobs.vampire_minion.title=Vampire Minion
 guide.vampirism.mobs.vampire_minion.text=Are subordinated to their lord./nHave the texture of their lord./nCan be controlled by vampire lord players.
@@ -71,7 +73,19 @@ guide.vampirism.vplayer.skills.revive_fallen=Skill\: Revive the fallen/n/nZombie
 guide.vampirism.vplayer.skills.end=There are many more skills. Just try them out.
 guide.vampirism.vplayer.skills.menu_text=This is the "skill rose" to toggle skills
 
-
-
+#VampireLord
+guide.vampirism.vlord.category=Vampire Lord
+guide.vampirism.vlord.introduction.title=Introduction
+guide.vampirism.vlord.introduction.text=All the while there was one which was superior to the others. He calls himself Dracula and lives in a large castle. He has minions which serve him and sacrifize themselves to protect him. /nOnly very few vampires tried to defeat him and take his position, but they all failed. Maybe you can do better?
+guide.vampirism.vlord.become.title=How to become one
+guide.vampirism.vlord.become.text=If you really want to take Dracula's place, you have to be prepared. Make sure you have already reached vampire level %d, otherwise you can not even get to him. Also equip yourself very well. /nThen start looking for Vampire Forest biomes with a castle inside. You can use %s to find it quicker. /nIn the main castle building take a look around, you should be able to find a special portal, which Dracula uses to quickly get to his home. Once you are in his main castle you have to defeat him to become a Vampire Lord. Good Look.
+guide.vampirism.vlord.about.title=About beeing a Lord
+guide.vampirism.vlord.about.text=Beeing a Vampire Lord makes you stronger and gives you some new skills (see the other entries), but there are a few things you should know. /nSome other vampires are also interested in becoming a Vampire Lord and there are a few ways you could loose your position to them. /nFirstly make sure to not be killed by a Hunter, because loosing a vampire level makes to to weak to hold your positions. /nSecondly be aware that other vampires will attack you, vampires in castles will mostly respect your superiority, but outside there are many envious ones. /nIf you are playing on a multiplayer server also read the according entry.
+guide.vampirism.vlord.multiplayer.title=In Multiplayer
+guide.vampirism.vlord.multiplayer.text=On multiplayer servers you also have to be aware that other players can defeat you and replace you as Lord if they are qualified. /nThis is also the way to become the Vampire Lord after the first player has defeated Dracula. But is also possible that the other player looses the Lord status, e.g. when he was offline for to long. /n/nThere is also the config option to allow multiple player vampire lords at once. If this is enabled, Dracula respawns and can be killed by another player.
+guide.vampirism.vlord.skills.title=Vampire Lord skills
+guide.vampirism.vlord.skills.text=After defeating the current Vampire Lord you also learn a few skills he had. They are available in the normal skill rose, but you might not be able to use all the old ones./n/nTeleport/nYou can teleport over short distances/n/nInvisibility/nBe invisble for a short time/n/nFreeze/nFreeze everyone around for a short time.
+guide.vampirism.vlord.minions.title=Minions
+guide.vampirism.vlord.minions.text=As Vampire Lord you are so powerful that you can make vampires to your minions. Freeze one and then use your bite key to intimidate him. He will become your minion. /nThen you can use %s while facing him to open a control menu and give him different different tasks. /nTo control multiple minions at ones, press the same key while facing no minion. /n/nThe normal minions will always stay with you, otherwise they would run away. To make them able to fulfill tasks at other places, you have to use the %s on them. /nThen you can send them for example to collect blood. To name your minions you can use a special and cheap minion name tag.
 
 
