Some more adjustments

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -2,7 +2,7 @@
 entity.vampirism.vampireHunter.name=Vampire Hunter
 entity.vampirism.vampire.name=Vampire
 entity.vampirism.ghost.name=Ghost
-entity.vampirism.vampireLord.name=Vampire Lord
+entity.vampirism.vampireLord.name=Vampire Baron
 entity.vampirism.vampireMinionR.name=Vampire Minion
 entity.vampirism.vampireMinionS.name=Vampire Minion
 entity.vampirism.blinding_bat.name=Bat
